# music-stream

./: .gitignore  README.md  docker-compose.yml
api/: .gitignore  alembic.ini  config.py  docker-compose.yaml  dockerfile  pyproject.toml  run.py
api/.apiVENV/: pyvenv.cfg
api/.venv_api/: pyvenv.cfg
api/auth/: model.py  repository.py  schema.py  security.py
api/auth/certs/: jwt-private.pem  jwt-public.pem
api/migrations/: env.py
api/migrations/versions/: 2df9f6270066_auth.py  c2c14aa816c3_users.py
api/users/: hashing.py  model.py  mutation.py  query.py  repository.py  router.py  schemas.py  security.py  service.py
protos/: musicstream.proto
proxy/: envoy.yaml
server/: client.py  main.py  makefile  pyproject.toml
server/server/: hello.py
stream/: Dockerfile  client.py  main.py  makefile  pyproject.toml
web/: Dockerfile  makefile  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  client.js  grpc_client.html  index.tsx  themes.tsx
web/src/components/: Auth.jsx  HelloName.jsx  Home.jsx  LoginPage.jsx  Music.jsx  Player.jsx  RegistrationPage.jsx  test.jsx
web/src/components/UI/: TopBar.jsx
web/src/http/: index.js
web/src/mutations/: user.js
web/src/proto/: hello_grpc_web_pb.js  hello_pb.js
web/src/query/: user.js
web/src/store/: store.js
