[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Нурсиль <n.sultanoff.2002s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
starlette-graphene3 = "^0.6.0"
fastapi = "^0.108.0"
asyncio = "^3.4.3"
graphene-file-upload = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
