[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Нурсиль <n.sultanoff.2002s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
sounddevice = "^0.4.6"
pygame = "^2.5.2"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
